--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "reliese/laravel",
-    "description": "Reliese Components for Laravel Framework code generation.",
+    "name": "gorbas/laravel_model_scaffolding",
+    "description": "Fork of the Reliese Components for Laravel Framework code generation.",
     "keywords": ["reliese", "laravel"],
     "homepage": "http://cristianllanos.com",
     "support": {
@@ -17,11 +17,11 @@
     "require": {
         "php": ">=5.6.4",
         "doctrine/dbal": "~2.5",
-        "illuminate/support": "~5.1",
-        "illuminate/database": "~5.1",
-        "illuminate/contracts": "~5.1",
-        "illuminate/filesystem": "~5.1",
-        "illuminate/console": "~5.1"
+        "illuminate/support": "^5.1",
+        "illuminate/database": "^5.1",
+        "illuminate/contracts": "^5.1",
+        "illuminate/filesystem": "^5.1",
+        "illuminate/console": "^5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
