--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     "require": {
         "php": ">=5.6.4",
         "doctrine/dbal": "~2.5",
-        "illuminate/support": "^5.1|^6.0",
-        "illuminate/database": "^5.1|^6.0",
-        "illuminate/contracts": "^5.1|^6.0",
-        "illuminate/filesystem": "^5.1|^6.0",
-        "illuminate/console": "^5.1|^6.0"
+        "illuminate/support": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/database": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/contracts": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/filesystem": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/console": "^5.1|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
